...

    var id: String { rawValue }

    var title: String {
        switch self {
        case .key:
            return "Important"
        case .flow:
            return "Standard"
        case .full:
            return "All Plays"
        }
    }

    var sectionTitle: String {
        switch self {
        case .key:
...
